# checkio

checkio/: all_the_same.py  all_upper_I.py  backward_string.py  count_digits.py  end_zeros.py  number_length.py  pyproject.toml  remove_all_before.py  replace_first.py  sum_numbers.py  the_most_frequent.py
checkio/tests/: test_backward_string.py  test_count_digits.py  test_end_zeros.py  test_number_length.py  test_remove_all_before.py  test_replace_first.py  test_sum_numbers.py  test_the_most_frequent.py  test_when_all_elements_are_the_same.py  test_when_all_elements_are_upper.py
