[tool.poetry]
name = "checkio"
version = "0.1.0"
description = "This project goal is to learn the best programming practices"
authors = ["jeangnamien <jean.gnamien@master.centralelille.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
